bin_PROGRAMS = sjeng
sjeng_SOURCES = attacks.c crazy.c epd.c learn.c partner.c seval.c \
                ttable.c book.c ecache.c eval.c moves.c search.c \
                sjeng.c utils.c newbook.c\
		protos.h extvars.h sjeng.h
EXTRA_DIST = TODO NEWS ChangeLog COPYING BUGS THANKS
SUBDIRS = books tests
