dnl Process this file with autoconf to produce a configure script.
AC_INIT(sjeng.c)

AM_INIT_AUTOMAKE(Sjeng, 7.5.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(gdbm, gdbm_open)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h sys/timeb.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(ftime select strstr gettimeofday)

AC_OUTPUT(Makefile tests/Makefile books/Makefile)
